# OmicSelector2

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  IMPLEMENTATION_STATUS.md  PR_DESCRIPTION.md  README.md  TESTING_PIPELINE.md  TEST_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b421c157c655_initial_schema_with_users_datasets_jobs_.py
docker/: Dockerfile.api  Dockerfile.mlflow  Dockerfile.worker
docs/: v2.0_ARCHITECTURE.md
examples/: 00_getting_started_colab.ipynb  01_basic_feature_selection.ipynb  02_hyperparameter_tuning.ipynb  03_signature_benchmarking.ipynb  04_data_preprocessing.ipynb  05_stability_selection.ipynb  06_model_interpretation.ipynb  07_complete_workflow.ipynb  README.md  demo_feature_selection.py  full_pipeline_example.py
knowledge/: concept1.md  concept2.md  concept3.md  knowledge1.md  knowledge2.md
src/omicselector2/: __init__.py
src/omicselector2/api/: __init__.py  dependencies.py  main.py  websockets.py
src/omicselector2/api/routes/: __init__.py  auth.py  data.py  jobs.py
src/omicselector2/data/: __init__.py
src/omicselector2/db/: __init__.py  database.py  dataset.py  job.py  result.py  user.py
src/omicselector2/features/: __init__.py  base.py  ensemble.py  stability.py
src/omicselector2/features/classical/: __init__.py  boruta.py  cox.py  elastic_net.py  l1svm.py  lasso.py  mrmr.py  random_forest.py  relieff.py  ridge.py  statistical.py  variance_threshold.py  xgboost.py
src/omicselector2/features/deep_learning/: __init__.py
src/omicselector2/features/filters/: correlation.py
src/omicselector2/features/graph_based/: __init__.py
src/omicselector2/features/single_cell/: __init__.py  hdg.py  heg.py
src/omicselector2/features/statistical/: __init__.py  significance.py
src/omicselector2/inference/: __init__.py
src/omicselector2/models/: __init__.py  base.py
src/omicselector2/models/classical/: __init__.py  linear_models.py  random_forest.py  xgboost_models.py
src/omicselector2/models/graph/: __init__.py
src/omicselector2/models/multi_omics/: __init__.py
src/omicselector2/models/neural/: __init__.py  tabnet_models.py
src/omicselector2/tasks/: __init__.py  feature_selection.py  model_training.py
src/omicselector2/training/: __init__.py  benchmarking.py  callbacks.py  cross_validation.py  evaluator.py  hyperparameter.py  trainer.py
src/omicselector2/utils/: __init__.py  config.py  redis_pubsub.py  security.py  storage.py
src/omicselector2/visualization/: __init__.py
tests/: __init__.py  conftest.py  test_api_auth.py  test_api_data.py  test_api_dependencies.py  test_api_jobs.py  test_ensemble_methods.py  test_feature_selection.py  test_full_pipeline.py  test_imports.py  test_integration_feature_selection.py  test_project_structure.py  test_security.py  test_stability_selection.py  test_version.py
tests/integration/: conftest.py  test_auth_flow.py  test_data_upload.py  test_e2e_workflows.py  test_job_submission.py  test_websocket_updates.py
tests/unit/test_api/: test_main.py
tests/unit/test_features/: test_base.py  test_boruta.py  test_correlation_filter.py  test_cox.py  test_elastic_net.py  test_ensemble.py  test_hdg.py  test_heg.py  test_l1svm.py  test_lasso.py  test_mrmr.py  test_random_forest.py  test_relieff.py  test_ridge.py  test_stability.py  test_statistical.py  test_statistical_significance.py  test_variance_threshold.py  test_xgboost.py
tests/unit/test_models/: test_classical.py  test_model_base.py  test_tabnet.py
tests/unit/test_training/: test_benchmarking.py  test_callbacks.py  test_cross_validation.py  test_evaluator.py  test_hyperparameter.py  test_trainer.py
tests/unit/test_utils/: test_config.py
