[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omicselector2"
version = "0.1.0"
description = "Next-generation Python platform for multi-omic biomarker discovery in oncology"
authors = [
    {name = "OmicSelector Team", email = "omicselector@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["bioinformatics", "multi-omics", "biomarker", "machine-learning", "oncology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # Core
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",

    # FastAPI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",

    # Bioinformatics
    "scanpy>=1.9.6",
    "anndata>=0.10.0",
    "biopython>=1.83",
    "pysam>=0.22.0",
    "lifelines>=0.27.8",
    "statsmodels>=0.14.0",
    "pingouin>=0.5.4",

    # Machine Learning
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.12.0",

    # Deep Learning
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pytorch-tabnet>=4.0",

    # Job Queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "flower>=2.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # MLOps
    "mlflow>=2.10.0",
    "optuna>=3.5.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
torch-geometric = [
    "torch-geometric>=2.5.0",
    "torch-scatter>=2.1.0",
    "torch-sparse>=0.6.0",
]

rna-seq = [
    "pydeseq2>=0.4.0",
]

radiomics = [
    "pyradiomics>=3.1.0",
]

visualization = [
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.98.0",

    # Code Quality
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pylint>=3.0.0",

    # Type stubs
    "pandas-stubs>=2.1.0",
    "types-redis>=4.6.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",

    # Debugging
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
]

all = [
    "omicselector2[torch-geometric,rna-seq,radiomics,visualization,dev]"
]

[project.urls]
Homepage = "https://github.com/omicselector/omicselector2"
Documentation = "https://omicselector2.readthedocs.io"
Repository = "https://github.com/omicselector/omicselector2"
"Bug Tracker" = "https://github.com/omicselector/omicselector2/issues"

[project.scripts]
omicselector2 = "omicselector2.cli:main"

[tool.setuptools]
packages = ["omicselector2"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
omicselector2 = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["omicselector2"]
known_third_party = [
    "fastapi",
    "pydantic",
    "numpy",
    "pandas",
    "sklearn",
    "torch",
    "pytorch_tabnet",
    "celery",
    "sqlalchemy",
]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "scanpy.*",
    "anndata.*",
    "pysam.*",
    "pyradiomics.*",
    "torch_geometric.*",
    "pytorch_tabnet.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src/omicselector2",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests (deselect with '-m \"not slow\"')",
    "requires_gpu: Tests requiring GPU",
    "requires_db: Tests requiring database",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src/omicselector2"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

# Pylint configuration
[tool.pylint.main]
py-version = "3.11"
jobs = 0
ignore = [".git", "__pycache__", "build", "dist"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring (handled by flake8)
    "C0115",  # missing-class-docstring (we use Google style)
    "C0116",  # missing-function-docstring (we use Google style)
    "R0903",  # too-few-public-methods (Pydantic models)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 12
